<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="station_name_0001_helsinki">Helsinki</string>
    <string name="station_name_0009_ilmala">Ilmala</string>
    <string name="station_name_0010_pasila">Pasila</string>
    <string name="station_name_0015_oulunkyla">Oulunkylä</string>
    <string name="station_name_0017_malmi">Malmi</string>
    <string name="station_name_0018_tikkurila">Tikkurila</string>
    <string name="station_name_0020_kerava">Kerava</string>
    <string name="station_name_0022_nikkila">Nikkilä</string>
    <string name="station_name_0023_porvoo">Porvoo</string>
...
