...
    <string name="label_welcome">Welcome!</string>
    <string name="text_introduction">
        This application allows you to browse timetable information of trains operating in Finland.
    </string>
    <string name="label_select_station">Select station</string>
    <string name="label_nearest_station">Nearest station</string>
    <string name="label_search_station">Search station</string>
    
    <string name="label_about_application">About the application</string>
    <string name="label_information_source">Source of traffic information:</string>
    <string name="text_information_source" translatable="false">
        Traffic Management Finland / digitraffic.fi, license CC 4.0 BY
    </string>
...
    <string name="message_loading_timetable">Retrieving timetable.</string>

    <!-- The message shown when loading a timetable for a station fails. -->
    <string name="message_loading_timetable_failed">Retrieving timetable failed.</string>

    <!-- The message shown when no station matching the search is found. -->
    <string name="message_no_matching_stations">No stations match the search.</string>

    <!-- The message shown when waiting for user's current location. -->
    <string name="message_retrieving_location">Retrieving current location.</string>

    <!-- The message shown when the timetable of the selected station is empty. -->
    <string name="message_empty_timetable">
...
